# Qt_sculptor

./: README.md
conceptualization_files/: coin.txt
docs/: CMakeLists_8txt.html  ColorPicker_8cpp.html  ColorPicker_8h.html  ColorPicker_8h_source.html  CutBox_8cpp.html  CutBox_8h.html  CutBox_8h_source.html  CutEllipsoid_8cpp.html  CutEllipsoid_8h.html  CutEllipsoid_8h_source.html  CutSphere_8cpp.html  CutSphere_8h.html  CutSphere_8h_source.html  CutVoxel_8cpp.html  CutVoxel_8h.html  CutVoxel_8h_source.html  GeometricFigure_8h.html  GeometricFigure_8h_source.html  Interpreter_8cpp.html  Interpreter_8h.html  Interpreter_8h_source.html  Plotter_8cpp.html  Plotter_8h.html  Plotter_8h.js  Plotter_8h_source.html  PutBox_8cpp.html  PutBox_8h.html  PutBox_8h_source.html  PutEllipsoid_8h.html  PutEllipsoid_8h_source.html  PutSphere_8cpp.html  PutSphere_8h.html  PutSphere_8h_source.html  PutVoxel_8cpp.html  PutVoxel_8h.html  PutVoxel_8h_source.html  README_8md.html  Sculptor_8cpp.html  Sculptor_8h.html  Sculptor_8h.js  (+112 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+50 more)
doxygen/latex/: make.bat
off_files/: coin.off
settings/: CMakeLists.txt
